fix modal formatting when viewed on smaller screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -313,15 +313,17 @@ ul {
 
 .m-content {
   z-index: 200;
-   background-color: #4582EC;
-   border: 2px solid black;
-   border-radius: 3px;
-   height: 600px;
-   width: 600px;
-   position: fixed;
-   left: 25%;
-   margin-top: 50px;
-   padding: 10px 60px 20px 60px;
+  background-color: #4582EC;
+  border: 2px solid black;
+  border-radius: 3px;
+  height: 85%;
+  width: 600px;
+  position: relative;
+  left: 25%;
+  margin-top: 50px;
+  padding: 10px 60px 20px 60px;
+  overflow: scroll;
+
 }
 
 .m-review-title {
